creates minimized windows for non-nt windows variants (win98/me)